added the new files

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           </div>
         </div>
         <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="200">
-          <img src="assets/img/background.jpeg" class="img-fluid animated" alt="">
+          <img src="https://bootstrapmade.com/demo/templates/Ninestars/assets/img/hero-img.svg" class="img-fluid animated" alt="">
         </div>
       </div>
     </div>
